<?xml version="1.0"?>
<package format="2">
  <name>com2009_odometry_example</name>
  <version>0.0.0</version>
  <description>A package to support teaching of Robot Odometry for Week 2 of the COM2009 Robotics course</description>

  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/tom-howard/com2009_odometry_example.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
